--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,28 +5,15 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_OSX_DEPLOYMENT_TARGET "11.0" CACHE STRING "Minimum OS X deployment version")
 
-# Options
-option(BUILD_IOS "Build for iOS" OFF)
-
-# Set bundle identifier
-set(MACOSX_BUNDLE_GUI_IDENTIFIER "com.finalverse.finalstorm")
-set(MACOSX_BUNDLE_BUNDLE_NAME "FinalStorm")
-
 # Find frameworks
 find_library(METAL_FRAMEWORK Metal REQUIRED)
 find_library(METALKIT_FRAMEWORK MetalKit REQUIRED)
 find_library(QUARTZCORE_FRAMEWORK QuartzCore REQUIRED)
 find_library(COREFOUNDATION_FRAMEWORK CoreFoundation REQUIRED)
 find_library(FOUNDATION_FRAMEWORK Foundation REQUIRED)
-
-if(BUILD_IOS)
-    find_library(UIKIT_FRAMEWORK UIKit REQUIRED)
-    set(PLATFORM_FRAMEWORKS ${UIKIT_FRAMEWORK})
-else()
-    find_library(COCOA_FRAMEWORK Cocoa REQUIRED)
-    find_library(APPKIT_FRAMEWORK AppKit REQUIRED)
-    set(PLATFORM_FRAMEWORKS ${COCOA_FRAMEWORK} ${APPKIT_FRAMEWORK})
-endif()
+find_library(COCOA_FRAMEWORK Cocoa)
+find_library(APPKIT_FRAMEWORK AppKit)
+find_library(UIKIT_FRAMEWORK UIKit)
 
 # Source files
 set(SHARED_SOURCES
@@ -38,108 +25,110 @@ set(SHARED_SOURCES
     Shared/Core/Audio/AudioEngine.cpp
 )
 
-set(SHARED_HEADERS
-    Shared/Core/Math/Math.h
-    Shared/Core/Math/Transform.h
-    Shared/Core/World/Entity.h
-    Shared/Core/World/WorldManager.h
-    Shared/Core/Networking/FinalverseClient.h
-    Shared/Core/Networking/MessageProtocol.h
-    Shared/Core/Audio/AudioEngine.h
-    Shared/Renderer/Renderer.h
-    Shared/Renderer/ShaderTypes.h
+set(METAL_RENDERER_SOURCES
+    MetalRenderer/MetalRenderer.mm
 )
-
-if(BUILD_IOS)
-    set(PLATFORM_SOURCES
-        iOS/main.m
-        iOS/AppDelegate.m
-        iOS/GameViewController.mm
-        MetalRenderer/MetalRenderer.mm
-    )
-    set(INFO_PLIST_PATH ${CMAKE_CURRENT_SOURCE_DIR}/iOS/Info.plist)
-else()
-    set(PLATFORM_SOURCES
-        macOS/main.m
-        macOS/GameViewController.mm
-        MetalRenderer/MetalRenderer.mm
-    )
-    set(INFO_PLIST_PATH ${CMAKE_CURRENT_SOURCE_DIR}/macOS/Info.plist)
-endif()
 
 # Metal shaders
 set(METAL_SHADERS
     MetalRenderer/Shaders.metal
 )
 
-# Create executable - THIS MUST COME BEFORE target_link_libraries
+# Always create macOS target
 add_executable(FinalStorm MACOSX_BUNDLE
     ${SHARED_SOURCES}
-    ${SHARED_HEADERS}
-    ${PLATFORM_SOURCES}
+    ${METAL_RENDERER_SOURCES}
+    macOS/main.m
+    macOS/GameViewController.mm
     ${METAL_SHADERS}
 )
 
-# Set bundle properties
 set_target_properties(FinalStorm PROPERTIES
     MACOSX_BUNDLE TRUE
-    MACOSX_BUNDLE_INFO_PLIST ${INFO_PLIST_PATH}
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/macOS/Info.plist
     MACOSX_BUNDLE_GUI_IDENTIFIER "com.finalverse.finalstorm"
     MACOSX_BUNDLE_BUNDLE_NAME "FinalStorm"
-    MACOSX_BUNDLE_BUNDLE_VERSION "1.0"
-    MACOSX_BUNDLE_SHORT_VERSION_STRING "1.0"
     XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "com.finalverse.finalstorm"
-    XCODE_ATTRIBUTE_CURRENT_PROJECT_VERSION "1"
-    XCODE_ATTRIBUTE_MARKETING_VERSION "1.0"
+    XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC "YES"
+    XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++"
 )
 
-# Include directories
-target_include_directories(FinalStorm PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}
-)
+target_include_directories(FinalStorm PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
-# Link libraries - THIS MUST COME AFTER add_executable
 target_link_libraries(FinalStorm
     ${METAL_FRAMEWORK}
     ${METALKIT_FRAMEWORK}
     ${QUARTZCORE_FRAMEWORK}
     ${COREFOUNDATION_FRAMEWORK}
     ${FOUNDATION_FRAMEWORK}
-    ${PLATFORM_FRAMEWORKS}
+    ${COCOA_FRAMEWORK}
+    ${APPKIT_FRAMEWORK}
 )
 
-# Compile Metal shaders
-if(BUILD_IOS)
-    set(METAL_SDK iphonesimulator)
-else()
-    set(METAL_SDK macosx)
-endif()
-
+# Shader compilation for macOS
 add_custom_command(
     TARGET FinalStorm POST_BUILD
-    COMMAND xcrun -sdk ${METAL_SDK} metal -c ${CMAKE_CURRENT_SOURCE_DIR}/MetalRenderer/Shaders.metal -o ${CMAKE_CURRENT_BINARY_DIR}/Shaders.air
-    COMMAND xcrun -sdk ${METAL_SDK} metallib ${CMAKE_CURRENT_BINARY_DIR}/Shaders.air -o ${CMAKE_CURRENT_BINARY_DIR}/default.metallib
+    COMMAND ${CMAKE_COMMAND} -E make_directory $<TARGET_BUNDLE_CONTENT_DIR:FinalStorm>/Resources
+    COMMAND xcrun -sdk macosx metal -c ${CMAKE_CURRENT_SOURCE_DIR}/MetalRenderer/Shaders.metal -o ${CMAKE_CURRENT_BINARY_DIR}/Shaders.air
+    COMMAND xcrun -sdk macosx metallib ${CMAKE_CURRENT_BINARY_DIR}/Shaders.air -o ${CMAKE_CURRENT_BINARY_DIR}/default.metallib
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/default.metallib $<TARGET_BUNDLE_CONTENT_DIR:FinalStorm>/Resources/
-    COMMENT "Compiling Metal shaders"
+    COMMENT "Compiling Metal shaders for macOS"
 )
 
-# Copy Info.plist
-configure_file(${INFO_PLIST_PATH} ${CMAKE_CURRENT_BINARY_DIR}/Info.plist COPYONLY)
+# Always create iOS target (it will show up in Xcode even if not buildable on macOS)
+add_executable(FinalStorm-iOS MACOSX_BUNDLE
+    ${SHARED_SOURCES}
+    ${METAL_RENDERER_SOURCES}
+    iOS/main.m
+    iOS/AppDelegate.m
+    iOS/GameViewController.mm
+    ${METAL_SHADERS}
+)
 
-# Set deployment target for iOS
-if(BUILD_IOS)
-    set_target_properties(FinalStorm PROPERTIES
-        XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "14.0"
-        XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
+set_target_properties(FinalStorm-iOS PROPERTIES
+    MACOSX_BUNDLE TRUE
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/iOS/Info.plist
+    MACOSX_BUNDLE_GUI_IDENTIFIER "com.finalverse.finalstorm"
+    MACOSX_BUNDLE_BUNDLE_NAME "FinalStorm"
+    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "com.finalverse.finalstorm"
+    XCODE_ATTRIBUTE_PRODUCT_NAME "FinalStorm"
+    XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "14.0"
+    XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
+    XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC "YES"
+    XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++"
+    XCODE_ATTRIBUTE_SDKROOT "iphoneos"
+    XCODE_ATTRIBUTE_SUPPORTED_PLATFORMS "iphonesimulator iphoneos"
+)
+
+target_include_directories(FinalStorm-iOS PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+
+# Link iOS frameworks (conditionally)
+if(UIKIT_FRAMEWORK)
+    target_link_libraries(FinalStorm-iOS
+        ${METAL_FRAMEWORK}
+        ${METALKIT_FRAMEWORK}
+        ${QUARTZCORE_FRAMEWORK}
+        ${COREFOUNDATION_FRAMEWORK}
+        ${FOUNDATION_FRAMEWORK}
+        ${UIKIT_FRAMEWORK}
+    )
+else()
+    # Fallback for when UIKit isn't found on macOS
+    target_link_libraries(FinalStorm-iOS
+        ${METAL_FRAMEWORK}
+        ${METALKIT_FRAMEWORK}
+        ${QUARTZCORE_FRAMEWORK}
+        ${COREFOUNDATION_FRAMEWORK}
+        ${FOUNDATION_FRAMEWORK}
     )
 endif()
 
-# Enable ARC
-set_target_properties(FinalStorm PROPERTIES
-    XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC "YES"
-)
-
-# Set C++ standard library
-set_target_properties(FinalStorm PROPERTIES
-    XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++"
+# Shader compilation for iOS
+add_custom_command(
+    TARGET FinalStorm-iOS POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory $<TARGET_BUNDLE_CONTENT_DIR:FinalStorm-iOS>/Resources
+    COMMAND xcrun -sdk iphoneos metal -c ${CMAKE_CURRENT_SOURCE_DIR}/MetalRenderer/Shaders.metal -o ${CMAKE_CURRENT_BINARY_DIR}/Shaders-iOS.air || xcrun -sdk iphonesimulator metal -c ${CMAKE_CURRENT_SOURCE_DIR}/MetalRenderer/Shaders.metal -o ${CMAKE_CURRENT_BINARY_DIR}/Shaders-iOS.air
+    COMMAND xcrun -sdk iphoneos metallib ${CMAKE_CURRENT_BINARY_DIR}/Shaders-iOS.air -o ${CMAKE_CURRENT_BINARY_DIR}/default-iOS.metallib || xcrun -sdk iphonesimulator metallib ${CMAKE_CURRENT_BINARY_DIR}/Shaders-iOS.air -o ${CMAKE_CURRENT_BINARY_DIR}/default-iOS.metallib
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/default-iOS.metallib $<TARGET_BUNDLE_CONTENT_DIR:FinalStorm-iOS>/Resources/default.metallib
+    COMMENT "Compiling Metal shaders for iOS"
 )
