Refine scene graph node implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ set(SHARED_SOURCES
     Shared/Core/Networking/FinalverseClient.cpp
     Shared/Core/Networking/MessageProtocol.cpp
     Shared/Core/Audio/AudioEngine.cpp
+    Shared/SceneGraph/SceneNode.cpp
+    Shared/SceneGraph/ServiceNode.cpp
 )
 
 set(METAL_RENDERER_SOURCES
