--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,12 @@ set(SHARED_SOURCES
     Shared/Core/Networking/FinalverseClient.cpp
     Shared/Core/Networking/MessageProtocol.cpp
     Shared/Core/Audio/AudioEngine.cpp
+    Shared/Core/Input/InteractionManager.cpp
     Shared/SceneGraph/SceneNode.cpp
     Shared/SceneGraph/ServiceNode.cpp
+    Shared/UI3D/Panel.cpp
+    Shared/UI3D/HolographicDisplay.cpp
+    Shared/UI3D/InteractiveOrb.cpp
 )
 
 set(METAL_RENDERER_SOURCES
