Add ServiceVisualizations header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ set(SHARED_SOURCES
     Shared/Core/Input/InteractionManager.cpp
     Shared/SceneGraph/SceneNode.cpp
     Shared/SceneGraph/ServiceNode.cpp
+    Shared/Core/Services/WebServerViz.cpp
+    Shared/Core/Services/DatabaseViz.cpp
     Shared/UI3D/Panel.cpp
     Shared/UI3D/HolographicDisplay.cpp
     Shared/UI3D/InteractiveOrb.cpp
