Add basic service scene management

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,10 @@ set(SHARED_SOURCES
     Shared/SceneGraph/ServiceNode.cpp
     Shared/Core/Services/WebServerViz.cpp
     Shared/Core/Services/DatabaseViz.cpp
+    Shared/Core/Services/ServiceEntity.cpp
     Shared/Core/Environment/EnvironmentController.cpp
     Shared/Core/Visualization/DataVisualizer.cpp
+    Shared/Core/World/SceneManager.cpp
     Shared/UI3D/Panel.cpp
     Shared/UI3D/HolographicDisplay.cpp
     Shared/UI3D/InteractiveOrb.cpp
